[gd_scene load_steps=28 format=2]

[ext_resource path="res://assets/items/pineapple/pineapple_03.png" type="Texture" id=1]
[ext_resource path="res://assets/items/pineapple/pineapple_01.png" type="Texture" id=2]
[ext_resource path="res://assets/items/pineapple/pineapple_04.png" type="Texture" id=3]
[ext_resource path="res://assets/items/pineapple/pineapple_05.png" type="Texture" id=4]
[ext_resource path="res://assets/items/pineapple/pineapple_02.png" type="Texture" id=5]
[ext_resource path="res://assets/items/pineapple/pineapple_00.png" type="Texture" id=6]
[ext_resource path="res://assets/items/pineapple/pineapple_11.png" type="Texture" id=7]
[ext_resource path="res://assets/items/pineapple/pineapple_15.png" type="Texture" id=8]
[ext_resource path="res://assets/items/pineapple/pineapple_16.png" type="Texture" id=9]
[ext_resource path="res://assets/items/pineapple/pineapple_07.png" type="Texture" id=10]
[ext_resource path="res://assets/items/pineapple/pineapple_13.png" type="Texture" id=11]
[ext_resource path="res://assets/items/pineapple/pineapple_09.png" type="Texture" id=12]
[ext_resource path="res://assets/items/pineapple/pineapple_06.png" type="Texture" id=13]
[ext_resource path="res://assets/items/pineapple/pineapple_12.png" type="Texture" id=14]
[ext_resource path="res://assets/items/pineapple/pineapple_08.png" type="Texture" id=15]
[ext_resource path="res://assets/items/pineapple/pineapple_10.png" type="Texture" id=16]
[ext_resource path="res://assets/items/pineapple/pineapple_14.png" type="Texture" id=17]
[ext_resource path="res://src/environment/BonusFruit.gd" type="Script" id=18]
[ext_resource path="res://assets/items/collect/collect_00.png" type="Texture" id=19]
[ext_resource path="res://assets/items/collect/collect_02.png" type="Texture" id=20]
[ext_resource path="res://assets/items/collect/collect_03.png" type="Texture" id=21]
[ext_resource path="res://assets/items/collect/collect_01.png" type="Texture" id=22]
[ext_resource path="res://assets/items/collect/collect_04.png" type="Texture" id=23]
[ext_resource path="res://assets/items/collect/collect_05.png" type="Texture" id=24]
[ext_resource path="res://sounds/player/fruitCollect.wav" type="AudioStream" id=25]

[sub_resource type="CapsuleShape2D" id=1]
radius = 7.0
height = 6.0

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 2 ), ExtResource( 5 ), ExtResource( 1 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 13 ), ExtResource( 10 ), ExtResource( 15 ), ExtResource( 12 ), ExtResource( 16 ), ExtResource( 7 ), ExtResource( 14 ), ExtResource( 11 ), ExtResource( 17 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 34.0
}, {
"frames": [ ExtResource( 19 ), ExtResource( 22 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 23 ), ExtResource( 24 ) ],
"loop": true,
"name": "collect",
"speed": 24.0
} ]

[node name="BonusFruit" type="Area2D"]
z_index = -1
collision_layer = 8
script = ExtResource( 18 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
frame = 1
playing = true

[node name="CollectSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 25 )
volume_db = -5.0
[connection signal="body_entered" from="." to="." method="_on_BonusFruit_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="finished" from="CollectSound" to="." method="_on_CollectSound_finished"]
